--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
     </ol>
   </header>
   <div class="row">
-    <div class="col-md-5">
+    <div class="col-md-5 col-sm-4 col-xs-12">
       <div class="product-page-product-wrap jqzoom-stage">
         <div class="clearfix">
           <a href="../../../assets/theme_img/500x500.png" id="jqzoom" data-rel="gal-1">
@@ -21,9 +21,20 @@
         </div>
       </div>
     </div>
-    <div class="col-md-7">
+    <div class="col-md-7 col-sm-8 col-xs-12">
       <div class="row" data-gutter="10">
-        <div class="col-md-8">
+        <div class="col-md-4 col-sm-4 col-xs-12 pull-sm-right">
+          <div class="box-highlight">
+            <!--<p class="product-page-price-list"><%#= @product.price_in_rupees %></p>-->
+            <p class="product-page-price">₹<%= @product.price_in_rupees %></p>
+            <% if current_user.present? %>
+                <a class="btn btn-block btn-primary" style="margin-top: 10px" href="<%= new_product_enquiry_path(@product) %>">Enquire</a>
+            <% else %>
+                <a class="btn btn-block btn-primary popup-text" style="margin-top: 10px" data-effect="mfp-move-from-top" href="#nav-login-dialog">Enquire</a>
+            <% end %>
+          </div>
+        </div>
+        <div class="col-md-8 col-sm-8 col-xs-12 pull-sm-left">
           <div class="box">
             <ul class="product-page-product-rating">
               <li class="rated"><i class="fa fa-star"></i></li>
@@ -72,17 +83,6 @@
               </tr>
               </tbody>
             </table>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="box-highlight">
-            <!--<p class="product-page-price-list"><%#= @product.price_in_rupees %></p>-->
-            <p class="product-page-price">₹<%= @product.price_in_rupees %></p>
-            <% if current_user.present? %>
-                <a class="btn btn-block btn-primary" style="margin-top: 10px" href="<%= new_product_enquiry_path(@product) %>">Enquire</a>
-            <% else %>
-                <a class="btn btn-block btn-primary popup-text" style="margin-top: 10px" data-effect="mfp-move-from-top" href="#nav-login-dialog">Enquire</a>
-            <% end %>
           </div>
         </div>
       </div>
