--- a/app/views/customer/shared/_footer.html.erb
+++ b/app/views/customer/shared/_footer.html.erb
@@ -2,7 +2,8 @@
   <div class="container">
     <div class="row row-col-gap" data-gutter="60">
       <div class="col-sm-4 col-xs-12">
-        <h4 class="widget-title-sm">ByeBuying</h4>
+        <!--<h4 class="widget-title-sm">ByeBuying</h4>-->
+        <h4 class="widget-title-sm">Barter</h4>
         <p>Shop no. 31, New Sabzi Mandi, Sector 16, Faridabad</p>
       </div>
       <div class="col-sm-4 col-xs-12">
@@ -35,7 +36,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <p class="copyright-text">Copyright &copy; <a href="/index">ByeBuying</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved</p>
+        <!--<p class="copyright-text">Copyright &copy; <a href="/index">ByeBuying</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved</p>-->
+        <p class="copyright-text">Copyright &copy; <a href="/index">Barter</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved</p>
       </div>
       <!--<div class="col-md-6">-->
       <!--<ul class="payment-icons-list">-->
