--- a/app/views/welcome/shared/_footer.html.erb
+++ b/app/views/welcome/shared/_footer.html.erb
@@ -2,8 +2,7 @@
   <div class="container">
     <div class="row row-col-gap" data-gutter="60">
       <div class="col-sm-4 col-xs-12">
-        <!--<h4 class="widget-title-sm">ByeBuying</h4>-->
-        <h4 class="widget-title-sm">Barter</h4>
+        <h4 class="widget-title-sm">ByeBuying</h4>
         <p>Shop no. 31, New Sabzi Mandi, Sector 16, Faridabad</p>
       </div>
       <div class="col-sm-4 col-xs-12">
@@ -36,8 +35,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <!--<p class="copyright-text">Copyright &copy; <a href="/">ByeBuying</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved-->
-        <p class="copyright-text">Copyright &copy; <a href="/">Barter</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved
+        <p class="copyright-text">Copyright &copy; <a href="/">ByeBuying</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved
           <a href="/terms_condition">terms & Condition</a>  | <a href="/privacy_policy">Privacy Policy</a></p>
       </div>
       <!--<div class="col-md-6">-->
