--- a/app/views/customer/advertisements/index.html.erb
+++ b/app/views/customer/advertisements/index.html.erb
@@ -39,6 +39,9 @@
                   <%= link_to edit_customer_advertisement_path(advertisement) do %>
                       <i class="fa fa-edit"></i>
                   <%- end %>
+                  <%= link_to customer_advertisement_path(advertisement), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
+                      <i class="fa fa-trash fa-3"></i>
+                  <%- end %>
                 </td>
               </tr>
           <%- end %>
