--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -48,18 +48,18 @@
     <p>Welcome, Register to get Enter</p>
     <hr />
     <%= simple_form_for :customer, :url => customer_sign_up_path do |f| %>
-      <div class="form-group">
-        <%= f.input :name, class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= f.input :email, class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= f.input :password, class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= f.input :password_confirmation, class: 'form-control' %>
-      </div>
+        <div class="form-group">
+          <%= f.input :name, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.input :email, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.input :password, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.input :password_confirmation, class: 'form-control' %>
+        </div>
         <%= submit_tag 'Sign Up', class: 'btn btn-primary' %>
     <%- end %>
     <div class="gap gap-small"></div>
@@ -88,9 +88,8 @@
       <div class="navbar-header">
         <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#main-nav-collapse" area_expanded="false"><span class="sr-only">Main Menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">
-          <!--ByeBuying-->
-          Barter
+        <a class="navbar-brand" href="">
+        Barter
         </a>
       </div>
       <div class="collapse navbar-collapse" id="main-nav-collapse">
@@ -165,3 +164,4 @@
     </div>
   </nav>
 </div>
+<%= render partial: 'welcome/shared/alerts'%>
