--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -132,12 +132,21 @@
           </li>
         </ul>
 
-        <form class="navbar-form navbar-left navbar-main-search" role="search">
+        <!--<form class="navbar-form navbar-left navbar-main-search" role="search">-->
+          <%= simple_form_for [Search.new], class: "navbar-form navbar-left navbar-main-search", role: 'search' do |f| %>
+
+
           <div class="form-group">
-            <input class="form-control" type="text" placeholder="Search..." />
+            <!--<input class="form-control" type="text" placeholder="Search..." />-->
+            <%= f.input :name, label: '', class: 'form-control', placeholder: 'Search...'  %>
+            <%= f.submit '', class: 'fa fa-search navbar-main-search-submit' %>
+            <!--<a class="fa fa-search navbar-main-search-submit" href="#"></a>-->
           </div>
-          <a class="fa fa-search navbar-main-search-submit" href="#"></a>
-        </form>
+
+
+        <% end %>
+        <!--</form>-->
+
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
               <li class="dropdown"><a href="Javascript:void(0)"><%= current_user.email %></a>
