--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -101,8 +101,8 @@
         <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#main-nav-collapse" area_expanded="false"><span class="sr-only">Main Menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="/">
-          <!--ByeBuying-->
-          Barter
+          ByeBuying
+          <!--Barter-->
         </a>
       </div>
       <div class="collapse navbar-collapse" id="main-nav-collapse">
