--- a/app/views/layouts/customer.html.erb
+++ b/app/views/layouts/customer.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--<title>ByeBuying | Customer</title>-->
-  <title>Barter | Customer</title>
+  <title>ByeBuying | Customer</title>
+  <!--<title>Barter | Customer</title>-->
   <%= stylesheet_link_tag    'customer', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'customer', 'data-turbolinks-track' => true %>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
