--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -97,6 +97,8 @@
         <ul class="nav navbar-nav">
           <li class="dropdown"><a href="#"><i class="fa fa-reorder"></i>&nbsp; Shop by Category<i class="drop-caret" data-toggle="dropdown"></i></a>
             <ul class="dropdown-menu dropdown-menu-category">
+              <li><a href="/products">Products</a></li>
+              <li><a href="/services">Services</a></li>
               <% @categories.each do |category| %>
                   <li><a href="#"><%= category.name %></a>
                     <div class="dropdown-menu-category-section">
