--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -27,7 +27,7 @@
                       <%= image_tag 'theme_img/500x500.png', class: 'img-responsive product-img-alt' %>
                   <% end %>
                 </div>
-                <a class="product-link" href="#"></a>
+                <a class="product-link" href="<%= service_path(service)%>"></a>
                 <div class="product-caption">
                   <ul class="product-caption-rating">
                     <% for i in 1..5 %>
