--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -160,6 +160,7 @@
                   <li><%= link_to 'Advertisements', customer_advertisements_path %></li>
                   <li><%= link_to 'Products', customer_products_path %></li>
                   <li><%= link_to 'Services', customer_services_path %></li>
+                  <li><%= link_to 'Enquiries', customer_enquiries_path %></li>
                 </ul>
               </li>
               <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
