create privacy policy and terms & condition page

--- a/app/views/welcome/about_us.html.erb
+++ b/app/views/welcome/about_us.html.erb
@@ -4,81 +4,29 @@
   </header>
   <div class="row">
     <div class="col-xs-12">
-      <p class="lead">Aliquet fusce eget quisque posuere condimentum lectus molestie pulvinar placerat ac interdum maecenas mollis ad nostra rutrum ornare arcu taciti vitae lobortis eleifend iaculis turpis vitae cras tellus ultricies odio</p>
+      <p class="lead"><i>“It’s time to say bye bye to buying and start renting”</i></p>
     </div>
   </div>
   <div class="gap gap-small"></div>
   <div class="row row-col-gap">
-    <div class="col-md-8">
+    <div class="col-md-8 col-xs-12">
       <%= image_tag 'theme_img/960x480.png', class: 'img-responsive' %>
     </div>
     <div class="col-md-4">
       <h3 class="widget-title">Our Story</h3>
-      <p>Suspendisse nascetur tellus lacinia volutpat dictumst blandit scelerisque nullam ut ipsum proin hac morbi donec porttitor facilisi elementum facilisis per accumsan pretium aliquet commodo non duis est vestibulum phasellus leo</p>
-      <p>Fringilla pulvinar fermentum nunc augue id conubia luctus sociosqu himenaeos dictum duis lobortis penatibus class nascetur fames pulvinar varius pulvinar</p>
-      <p>Dignissim nascetur fringilla ligula luctus nisl habitasse ut ac sociis nisi tristique consectetur potenti curae nascetur pellentesque duis odio ornare</p>
-      <p>Vestibulum sem consectetur iaculis torquent lobortis dis libero risus parturient</p>
+      <p>Byebuying provides anonline platform for peer to peer renting which helps you to avail a wide range of products & services on rent like Home Appliances, Home Furnishing, Furniture, Electronic items, Entertainment items, Vehicles, Gym Equipment, Dresses, Kids Fancy Dresses, Books, Commercial/Advertisement Space, Membership and many more.You can search for products/services or browse through products/servicesas per your needand also find out the vendor that rents out the product/services in your locality.</p>
     </div>
   </div>
   <div class="gap gap-small"></div>
   <div class="row row-col-gap">
-    <div class="col-md-6">
-      <h3 class="widget-title">The Community</h3>
-      <p>Vestibulum congue litora fusce aenean at facilisi volutpat lorem mi consequat natoque tincidunt eget etiam nascetur iaculis iaculis non ultricies</p>
-      <p>Metus porta lobortis convallis lacinia integer platea cum pharetra duis nulla lectus himenaeos hac condimentum viverra condimentum morbi maecenas elit vestibulum vulputate nisl dignissim mus lacus sem euismod venenatis at</p>
-      <p>Varius mattis rutrum nostra habitant feugiat condimentum faucibus taciti porttitor</p>
-    </div>
-    <div class="col-md-6">
-      <%= image_tag 'theme_img/550x210.png', class: 'img-responsive' %>
-    </div>
-  </div>
-  <div class="gap gap-small"></div>
-  <div class="row row-col-gap">
-    <div class="col-md-9">
-      <div class="row row-sm-gap" data-gutter="10">
-        <div class="col-md-2">
-          <%= image_tag 'theme_img/300x300.png', class: 'img-responsive' %>
-        </div>
-        <div class="col-md-2">
-          <%= image_tag 'theme_img/300x300.png', class: 'img-responsive' %>
-        </div>
-        <div class="col-md-2">
-          <%= image_tag 'theme_img/300x300.png', class: 'img-responsive' %>
-        </div>
-        <div class="col-md-2">
-          <%= image_tag 'theme_img/300x300.png', class: 'img-responsive' %>
-        </div>
-        <div class="col-md-2">
-          <%= image_tag 'theme_img/300x300.png', class: 'img-responsive' %>
-        </div>
-        <div class="col-md-2">
-          <%= image_tag 'theme_img/300x300.png', class: 'img-responsive' %>
-        </div>
-        <div class="col-md-2">
-          <%= image_tag 'theme_img/300x300.png', class: 'img-responsive' %>
-        </div>
-        <div class="col-md-2">
-          <%= image_tag 'theme_img/300x300.png', class: 'img-responsive' %>
-        </div>
-        <div class="col-md-2">
-          <%= image_tag 'theme_img/300x300.png', class: 'img-responsive' %>
-        </div>
-        <div class="col-md-2">
-          <%= image_tag 'theme_img/300x300.png', class: 'img-responsive' %>
-        </div>
-        <div class="col-md-2">
-          <%= image_tag 'theme_img/300x300.png', class: 'img-responsive' %>
-        </div>
-        <div class="col-md-2">
-          <%= image_tag 'theme_img/300x300.png', class: 'img-responsive' %>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <h3 class="widget-title">Behind The Scenes</h3>
-      <p>Mi suspendisse sodales condimentum cum maecenas conubia massa morbi tristique ante iaculis sociosqu fusce lobortis phasellus nisi massa praesent torquent</p>
-      <p>Ultricies nullam ornare vitae justo ipsum nisi inceptos cursus blandit</p>
-      <p>Ipsum convallis quisque iaculis lectus orci facilisis maecenas mauris tristique</p>
+    <div class="col-xs-12 col-xs-12">
+      <p>At very nominalcost, ByeBuying helps you to choose wedding & party wear dresses like Sherwani, Jewellery, Lehenga etc., setting up your home with furniture, TV, Fridge, to setup your own Gym with lots of fitness equipment, thrill your party with musical equipment, home theatre systems, built part time office with computers/laptop, printers, projectors and many more items. </p>
+      <p>Not only this, ByeBuying also helps you to choose the right place to advertise and promoting your business as well makes you feel to have your own office/cabin when you actually don’t own it.</p>
+      <p>ByeBuying is the only website which you can say “One Stop Shop” for all your needs without actually buying these by spending lot of money. Avail each and everything on rent whether it’s a product or service and enjoy it by spending just a fraction of its cost.</p>
+      <p>Just logon to ByeBuying, Choose what you are looking for, Make the deal with owner/vendor and you’re done.</p>
+      <p>That’s why we say <i style="font-weight: bold;">“No Extra Spend, With Things On Rent”.</i> Live your desire without actually owing it.</p>
+      <p>We at ByeBuying feel that each one of us brings expensive & sometimes very expensive things like Cameras, Music players, wedding dresses, expensive gym equipment and many morebut we don’t use those items frequently and after some time those things become useless for us and whole money got wasted. So what if someone around you can help you to recover this money not fully but of course even if you get some fraction of total amount that will be great. Isn’t it? And also if doing this is completely free?</p>
+      <p class="lead"><i>So start renting your products or services today and let them earn for you.</i></p>
     </div>
   </div>
   <div class="gap gap-small"></div>
