--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -6,15 +6,9 @@
           <ul class="nav navbar-nav navbar-right navbar-right-no-mar">
             <li><a href="/about_us">About Us</a>
             </li>
-            <li><a href="/blog">Blog</a>
+            <li><a href="/listing_policy">Listing Policy</a>
             </li>
             <li><a href="/contact_us">Contact Us</a>
-            </li>
-            <li><a href="/faq">FAQ</a>
-            </li>
-            <!--<li><a href="#">Wishlist</a>-->
-            <!--</li>-->
-            <li><a href="/help">Help</a>
             </li>
           </ul>
         </div>
@@ -147,12 +141,16 @@
           </li>
         </ul>
 
-        <form class="navbar-form navbar-left navbar-main-search" role="search">
-          <div class="form-group">
-            <input class="form-control" type="text" placeholder="Search..." />
-          </div>
-          <a class="fa fa-search navbar-main-search-submit" href="#"></a>
-        </form>
+        <%= simple_form_for [Search.new], html: {class: 'navbar-form navbar-left navbar-main-search' }, role: 'search' do |f| %>
+            <div class="form-group">
+              <%= f.input :name, label: false, class: 'form-control', placeholder: 'Search...'  %>
+              <%#= f.input :controller_name, :as => :hidden, input_html: { value: "#{params[:controller]}" }  %>
+              <%#= f.input :action_name, :as => :hidden, input_html: {value: "#{params[:action]}"} %>
+              <%= f.submit '', class: 'fa fa-search navbar-main-search-submit' %>
+              <i class="fa fa-search search-icon"></i>
+            </div>
+        <% end %>
+
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
               <li class="dropdown"><a href="Javascript:void(0)"><%= current_user.email %></a>
