--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -24,3 +24,89 @@
     <% end %>
 <% end %>
 
+
+<div class="content-main-section">
+  <div class="container">
+    <div class="col-md-offset-1 col-sm-offset-1 col-md-10 col-sm-10 col-xs-12">
+      <h2 class="text-center">Add New Advertisement</h2>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="contact-main-form">
+            <% unless @service.present? %>
+                <%= simple_form_for [:product, @enquiry] do |f| %>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <%= f.input :start_at, label: 'Start Time of Product', label_html: {class: 'label'}, default: @product.start_at, input_html: {class: 'select-field'}  %>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <%= f.input :end_at, label: 'End Time of Product', label_html: {class: 'label'}, default: @product.end_at, input_html: {class: 'select-field'}  %>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <label for="rent" class="label">Rent</label>
+                        <p class="select-text"><%= @product.rent %></p>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <label for="Price" class="label">Price in Rupees</label>
+                        <p class="select-text"><%= @product.price_in_rupees %></p>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <%= f.input :expected_price, label: 'Expected price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                      </div>
+                    </div>
+
+                    <div class="clearfix"></div>
+                    <div class="submit-main">
+                      <%= f.submit 'Save', class: 'pushbutton-wide s-button btn btn-primary' %>
+                    </div>
+                <% end %>
+            <% else %>
+                <%= simple_form_for [:service, @enquiry] do |f| %>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <%= f.input :start_at, label: 'Start Time of Product', label_html: {class: 'label'}, default: @service.start_at, input_html: {class: 'select-field'}  %>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <%= f.input :end_at, label: 'End Time of Product', label_html: {class: 'label'}, default: @service.end_at, input_html: {class: 'select-field'}  %>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <label for="rent" class="label">Price Type</label>
+                        <p class="select-text"><%= @service.price_type %></p>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <label for="Price" class="label">Price in Rupees</label>
+                        <p class="select-text"><%= @service.price_in_rupees %></p>
+                      </div>
+                    </div>
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <%= f.input :expected_price, label: 'Expected price', label_html: {class: 'label'}, input_html: {class: 'text-field'}  %>
+                      </div>
+                    </div>
+
+                    <div class="clearfix"></div>
+                    <div class="submit-main">
+                      <%= f.submit 'Save', class: 'pushbutton-wide s-button btn btn-primary' %>
+                    </div>
+                <% end %>
+            <% end %>
+            <div class="clearfix"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
