--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -6,15 +6,9 @@
           <ul class="nav navbar-nav navbar-right navbar-right-no-mar">
             <li><a href="/about_us">About Us</a>
             </li>
-            <li><a href="/blog">Blog</a>
+            <li><a href="/listing_policy">Listing Policy</a>
             </li>
             <li><a href="/contact_us">Contact Us</a>
-            </li>
-            <li><a href="/faq">FAQ</a>
-            </li>
-            <!--<li><a href="#">Wishlist</a>-->
-            <!--</li>-->
-            <li><a href="/help">Help</a>
             </li>
           </ul>
         </div>
@@ -88,7 +82,7 @@
       <div class="navbar-header">
         <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#main-nav-collapse" area_expanded="false"><span class="sr-only">Main Menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="">
+        <a class="navbar-brand" href="/">
           ByeBuying
         <!--Barter-->
         </a>
@@ -135,21 +129,15 @@
           </li>
         </ul>
 
-        <form class="navbar-form navbar-left navbar-main-search" role="search">
-          <div class="form-group">
-            <input class="form-control" type="text" placeholder="Search..." />
-            <a class="fa fa-search navbar-main-search-submit" href="#"></a>
-          </div>
-        </form>
-
-        <!--<%#= simple_form_for [Search.new], class: "navbar-form navbar-left navbar-main-search", role: 'search' do |f| %>-->
-            <!--<div class="form-group">-->
-              <!--<%#= f.input :name, label: '', class: 'form-control', placeholder: 'Search...'  %>-->
-              <!--<%#= f.input :controller_name, :as => :hidden, input_html: { value: "#{params[:controller]}" }  %>-->
-              <!--<%#= f.input :action_name, :as => :hidden, input_html: {value: "#{params[:action]}"} %>-->
-              <!--<%#= f.submit '', class: 'fa fa-search navbar-main-search-submit' %>-->
-            <!--</div>-->
-        <!--<%# end %>-->
+        <%= simple_form_for [Search.new], html: {class: 'navbar-form navbar-left navbar-main-search' }, role: 'search' do |f| %>
+            <div class="form-group">
+              <%= f.input :name, label: false, class: 'form-control', placeholder: 'Search...'  %>
+              <%#= f.input :controller_name, :as => :hidden, input_html: { value: "#{params[:controller]}" }  %>
+              <%#= f.input :action_name, :as => :hidden, input_html: {value: "#{params[:action]}"} %>
+              <%= f.submit '', class: 'fa fa-search navbar-main-search-submit' %>
+              <i class="fa fa-search search-icon"></i>
+            </div>
+        <% end %>
 
 
         <ul class="nav navbar-nav navbar-right">
