--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -6,6 +6,12 @@
 </div>
 
 
+<script type="text/javascript">
+	$(document).ready(function(){
+		
+	});
+</script>
+
 <!--<script>-->
 
 <!--//    $(document).ready(function(){-->
