--- a/app/views/customer/services/_form.html.erb
+++ b/app/views/customer/services/_form.html.erb
@@ -103,7 +103,7 @@
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
-                    <%= f.input :negotiable, label: 'Negotiable', label_html: {class: 'label'}, input_html: {class: ''} %>
+                    <%= f.input :negotiable %>
                   </div>
                 </div>
                 <div class="col-xs-12">
