--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,20 +1,77 @@
-Products:
-<% @results[:products].each do |product| %>
+<div class="searches_main_con">
+	<div class="container">
+	
+		<% if @results[:products].any? %>
+			<h3>Product:</h3>
+			<% @results[:products].each do |product| %>
+				<div class="search_items">
+					<div class="col-xs-12">
+						<div class="row">
+							<div class="col-sm-8 col-xs-12">
+								<h5 class="product-name"><%= product.name %></h5> 
+						    	<p class="location"><%= product.location %></p>	
+							</div>
+							<div class="col-sm-4 col-xs-12 text-right">
+								<p class="category-name"><%=product.subcategory.category.name%> > <%=product.subcategory.name%> </p>	
+							</div>
+							<div class="col-xs-12">
+								<p class="description"><%= product.description %></p>
+							</div>
+						</div>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+			<% end %>
+		<% end %>
 
-    <%= product.name %>-<%=product.subcategory.category.name%>-<%=product.subcategory.name%> <br>
+		<% if @results[:services].any? %>
+			<h3>Service:</h3>
+			<% @results[:services].each do |service| %>
+				<div class="search_items">
+					<div class="col-xs-12">
+						<div class="row">
+							<div class="col-sm-8 col-xs-12">
+								<h5 class="product-name"><%= service.subcategory.category.name %></h5> 
+						    	<p class="location"><%= service.location %></p>	
+							</div>
+							<div class="col-sm-4 col-xs-12 text-right">
+								<p class="category-name"><%=service.subcategory.name%> </p>	
+							</div>
+							<div class="col-xs-12">
+								<p class="description"><%= service.service_description %></p>
+							</div>
+						</div>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+			<% end %>
+		<% end %>
 
-<% end %>
+		<% if @results[:advertisements].any? %>
+			<h3>Advertisement:</h3>
+			<% @results[:advertisements].each do |advertisement| %>
+				<div class="search_items">
+					<div class="col-xs-12">
+						<div class="row">
+							<div class="col-sm-8 col-xs-12">
+								<h5 class="product-name"><%= advertisement.title %></h5> 	
+							</div>
+							<div class="col-sm-4 col-xs-12 text-right">
+								<p class="category-name">
+									<%=advertisement.subcategory.category.name%> > <%= advertisement.subcategory.name %>
+								</p>	
+							</div>
+							<div class="col-xs-12">
+								<p class="description">
+									<%= advertisement.description %>
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+			<% end %>
+		<% end %>
 
-Service:
-<% @results[:services].each do |service| %>
-
-    <%= service.service_description %>-<%=service.subcategory.category.name%>-<%=service.subcategory.name%> <br>
-
-<% end %>
-
-Advertisement:
-<% @results[:advertisements].each do |advertisement| %>
-
-    <%= advertisement.title %>-<%=advertisement.subcategory.category.name%>-<%=advertisement.subcategory.name%> <br>
-
-<% end %>
+	</div>
+</div>
