--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-12">
-    <%= link_to 'Post product', new_admin_product_path, class: 'btn btn-primary' %>
+    <%#= link_to 'Post product', new_admin_product_path, class: 'btn btn-primary' %>
   </div>
 </div>
 <div class="row">
