--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,7 +24,7 @@
             <p class="slider-item-caption-desc">This is for The Players</p>
             <!--<a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>-->
           </div>
-          <%= image_tag 'theme_img/test_slider/13-i.png', class: 'slider-item-img-right', style:'top: 60%; width: 56%;' %>
+          <%= image_tag 'slider_img/slider-img1.png', class: 'slider-item-img-right', style:'top: 60%; width: 56%;' %>
         </div>
       </div>
     </div>
@@ -33,7 +33,7 @@
     <div class="slider-item" style="background-color:#9ce0e2;" >
       <div class="container">
         <div class="slider-item-inner">
-          <%= image_tag 'theme_img/test_slider/13-i.png', class: 'slider-item-img-left'%>
+          <%= image_tag 'slider_img/slider-img2.png', class: 'slider-item-img-left'%>
           <div class="slider-item-caption-right slider-item-caption-white">
             <h4 class="slider-item-caption-title">Smart Watches</h4>
             <p class="slider-item-caption-desc">Get One Just from $99</p>
@@ -52,7 +52,7 @@
             <p class="slider-item-caption-desc">Your Running Shoes, Right Away.</p>
             <!--<a class="btn btn-lg btn-ghost btn-black" href="#">Shop Now</a>-->
           </div>
-          <%= image_tag 'theme_img/test_slider/13-i.png', class: 'slider-item-img-right' %>
+          <%= image_tag 'slider_img/slider-img3.png', class: 'slider-item-img-right' %>
         </div>
       </div>
     </div>
