--- a/app/views/customer/welcome/otp.html.erb
+++ b/app/views/customer/welcome/otp.html.erb
@@ -1,13 +1,16 @@
 <%= form_tag customer_step_three_path, method: :post  do %>
     OTP: <%= text_field_tag :otp %>
+    <div class=" btn btn-info sending-otp">Send OTP</div>
     <%= hidden_field_tag 'phone', @phone %>
-    <%= submit_tag %>
+    <%= submit_tag 'Proceed' %>
 <% end %>
 
 <script type="text/javascript" charset="utf-8">
 
     $(document).ready ( function(){
-        $.get("http://bhashsms.com/api/sendmsg.php?user=ravikataria&pass=123&sender=BYEBUY&phone="+ <%= @phone %> +"&text= Your OTP is "+ <%=@otp%> +"&priority=ndnd& stype=normal", function(data, status){});
+        $(".sending-otp").click(function(){
+            $.get("http://bhashsms.com/api/sendmsg.php?user=ravikataria&pass=123&sender=BYEBUY&phone="+ <%= @phone %> +"&text= Your OTP is "+ <%=@otp%> +"&priority=ndnd& stype=normal", function(data, status){});
+        });
     });
 
 </script>
