--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -21,19 +21,19 @@
             <td><%= product.subcategory.category.name %></td>
             <td><%= product.subcategory.name %></td>
             <td>
+              <% if product.admin_verified? %>
+                  <span class="text-success">Verified</span>
+                  <%= link_to( 'Un-verify' , admin_approve_admin_product_path(product, admin_verified: false), method: :put, class: 'btn btn-danger btn-xs') %>
+              <%- else %>
+                  <span class="text-danger">Not verified</span>
+                  <%= link_to( 'Verify' , admin_approve_admin_product_path(product, admin_verified: true), method: :put, class: 'btn btn-success btn-xs') %>
+              <%- end %>
               <%= link_to admin_product_path(product) do %>
                   <i class="fa fa-eye"></i>
               <% end %>
               <%= link_to admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
                   <i class="fa fa-trash fa-3"></i>
               <%- end %>
-              <%# if product.admin_verified? %>
-                  <!--<span class="text-success">Verified by admin</span>-->
-                  <%#= link_to( 'Un-verify' , admin_approve_admin_product_path(product, admin_verified: false), method: :put, class: 'btn btn-danger btn-xs') %>
-              <%#- else %>
-                  <!--<span class="text-danger">Not verified</span>-->
-                  <%#= link_to( 'Verify' , admin_approve_admin_product_path(product, admin_verified: true), method: :put, class: 'btn btn-success btn-xs') %>
-              <%#- end %>
             </td>
           </tr>
       <%- end %>
